# tutor-mfe-build-extra-certs

./: MANIFEST.in  Makefile  README.rst  pyproject.toml
tutormfe_build_extra_certs/: plugin.py
tutormfe_build_extra_certs/patches/: openedx-dockerfile-minimal
