# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://hatch.pypa.io/latest/config/build/

[project]
name = "tutor-contrib-mfe-build-extra-certs"
description = "mfe-build-extra-certs plugin for Tutor"
authors = [
  { name = "Javier Ontiveros"},
  { email = "hola@javo.work" },
]
license = { text = "AGPL-3.0-only" }

readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",

]
dependencies = [
    "tutor>=19.0.0,<22.0.0",
    "tutor-mfe>=19.0.0,<22.0.0",
]

# These fields will be set by hatch_build.py
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "tutor[dev]>=19.0.0,<22.0.0",
    "tutor-mfe[dev]>=19.0.0,<22.0.0",
    "ruff",
]

[tool.hatch.version]
path = "tutormfe_build_extra_certs/__about__.py"

# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[project.urls]
Documentation = "https://github.com/WGU-Open-edX/tutor-mfe-build-extra-certs.git#readme"
Issues = "https://github.com/WGU-Open-edX/tutor-mfe-build-extra-certs.git/issues"
Source = "https://github.com/WGU-Open-edX/tutor-mfe-build-extra-certs.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tutormfe_build_extra_certs"]

[tool.hatch.build.targets.sdist]
# Disable strict naming, otherwise twine is not able to detect name/version
strict-naming = false
include = [ "/tutormfe_build_extra_certs"]
exclude = ["tests*"]

[project.entry-points."tutor.plugin.v1"]
mfe-build-extra-certs = "tutormfe_build_extra_certs.plugin"
